# vk_cinematic

./: .clang-format  .doxygen  .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  Dockerfile  LICENSE  README.md  build.bat  build_dependencies.bat  build_docs.bat  mkdocs.yml  shell.bat
.github/workflows/: cmake.yml  docker-image.yml
assets/: attributions.md  kiara_4_mid-morning_4k.exr
dependencies/: CMakelists.txt  assimp.json  glfw.json
integration_tests/: CMakeLists.txt  integration_tests.cpp
perf_tests/: perf_tests.cpp
src/: CMakeLists.txt  CMakelists.txt  aabb.h  bvh.cpp  bvh.h  cmdline.cpp  collision_world.cpp  collision_world.h  config.h  cpu_ray_tracer.cpp  cpu_ray_tracer.h  cpu_ray_tracer_manual_tests.cpp  cubemap.cpp  debug.cpp  debug.h  image.cpp  image.h  input.h  intrinsics.h  lib.cpp  lib.h  main.cpp  math_lib.h  math_utils.h  memory_pool.cpp  memory_pool.h  mesh.cpp  mesh.h  mesh_generation.cpp  platform.h  profiler.h  ray_intersection.cpp  ray_intersection.h  scene.h  simd.h  simd_path_tracer.cpp  simd_path_tracer.h  sp_material_system.cpp  sp_material_system.h  sp_metrics.h  (+10 more)
src/asset_loader/: CMakeLists.txt  asset_loader.cpp  asset_loader.h
src/shaders/: CMakeLists.txt  debug_draw.frag.glsl  debug_draw.vert.glsl  fullscreen_quad.frag.glsl  fullscreen_quad.vert.glsl  mesh.frag.glsl  mesh.vert.glsl  post_processing.frag.glsl  skybox.frag.glsl  test_compute.comp.glsl
test/: CMakeLists.txt  test.cpp
unit_tests/: CMakeLists.txt  custom_assertions.h  test_bvh.cpp  test_simd_path_tracer.cpp  unit_tests.cpp
windows-dependencies/assimp/lib-vc2017/: assimp-vc141-mt.exp
windows-dependencies/glfw3/: LICENSE.txt
